--- a/_site.yml
+++ b/_site.yml
@@ -9,4 +9,6 @@ navbar:
       href: index.html
     - text: "About"
       href: about.html
+    - text: "Schedule"
+      href: schedule.html
 output: distill::distill_article
